# systing

./: .gitignore  Cargo.toml  README  README.md  build.rs  inotify.c  vmlinux_gen.sh
src/: cmds.rs  kallsyms.rs  main.rs  process.rs  tree_view.rs
src/bpf/: systing.bpf.c  systing_describe.bpf.c  systing_profile.bpf.c  vmlinux.h
src/cmds/: describe.rs  profile.rs
src/cmds/profile/: process.rs  tree_view.rs
