[package]
name = "systing"
version = "0.1.0"
edition = "2021"
authors = ["Josef Bacik <josef@toxicpanda.com>"]
license = "MIT"
description = "A libbpf based tracer to figure out what an application is doing"

[build-dependencies]
libbpf-cargo = "0.24"

[dependencies]
anyhow = "1.0"
blazesym = "0.2.0-rc.2"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4"
graphviz-rust = "0.9.3"
libbpf-rs = "0.24"
libc = "0.2"
petgraph = "0.6.5"
plain = "0.2"
strum = "0.26.3"
strum_macros = "0.26.4"
tui-realm-stdlib = "2.0.1"
tui-realm-treeview = "2.0.0"
tuirealm = "2.0.3"
